example/secondfile/objects/AT_T_Product_Options__c.object
<CustomObject>
    <description>Object setup to capture product option groups info for ATOM.</description>
    <fields>
        <fullName>AT_T_Product__c</fullName>
        <label>AT&amp;T Product</label>
        <referenceTo>AT_T_Product__c</referenceTo>
        <relationshipLabel>AT&amp;T Product Options</relationshipLabel>
        <relationshipName>AT_T_Product_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Option_Group_Name__c</fullName>
        <label>Option Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Options</fullName>
                </value>
                <value>
                    <fullName>Port Type</fullName>
                </value>
                <value>
                    <fullName>Port Speed</fullName>
                </value>
                <value>
                    <fullName>Access Type</fullName>
                </value>
                <value>
                    <fullName>Access Speed</fullName>
                </value>
                <value>
                    <fullName>Minimum Bandwidth Commitment</fullName>
                </value>
                <value>
                    <fullName>Interface Type</fullName>
                </value>
                <value>
                    <fullName>Installation Options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Component_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product Component Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Ext_Id__c</fullName>
        <formula>AT_T_Product__r.Product_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Ext Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Option_Type__c</fullName>
        <label>Product Option Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line T1</fullName>
                </value>
                <value>
                    <fullName>Private Line T3</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
                <value>
                    <fullName>Private Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AT&amp;T Product Options</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Option_Group_Name__c</columns>
        <columns>AT_T_Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Option_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Product_Id__c</columns>
        <columns>Product_Ext_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AT&amp;T Product Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>